Merged in latest changes, updated blockchain to 9 Oct 2011, put in place large number of trivial fixes against multibit code (not bitcoinj duplicates) using info from Findbugs, PMD and Intellij code inspections. Fix an NPE when wallet is empty in Send coins screen and click create new.